develop authorize module and exception module
